--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,8 @@
   <groupId>haptava</groupId>
   <artifactId>heroku-webdav</artifactId>
   <version>1.0-SNAPSHOT</version>
+  <url>https://github.com/haptava/heroku-webdav.git</url>
+  <packaging>pom</packaging>
 
   <properties>
     <skipTests>true</skipTests>
