--- a/conf/webdav.properties
+++ b/conf/webdav.properties
@@ -2,5 +2,6 @@
 # Copyright (c) 2015 Paul Ambrose
 #
 
-haptava.webdav.timing.enabled=false
 haptava.webdav.format=webdav
+haptava.webdav.timing.enabled=true
+haptava.webdav.header.logging.enabled=false
