Turn on admin servlets by default

--- a/conf/webdav.properties
+++ b/conf/webdav.properties
@@ -5,3 +5,14 @@
 haptava.webdav.format=webdav
 haptava.webdav.timing.enabled=true
 haptava.webdav.header.logging.enabled=false
+
+haptava.jvmmetrics.enabled=true
+
+haptava.servlet.ping.enabled=true
+haptava.servlet.metrics.enabled=true
+haptava.servlet.threaddump.enabled=true
+haptava.servlet.healthcheck.enabled=true
+
+haptava.adminservlets.username=admin
+haptava.adminservlets.password=secret
+
