Set default format for webdav data to json

--- a/conf/webdav.properties
+++ b/conf/webdav.properties
@@ -2,7 +2,7 @@
 # Copyright (c) 2015 Paul Ambrose
 #
 
-haptava.webdav.format=webdav
+haptava.webdav.format=json
 haptava.webdav.timing.enabled=true
 haptava.webdav.header.logging.enabled=false
 
