--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "name": "Haptava WebDAV Server",
-  "description": "A simple example of using Haptava with Heroku",
+  "description": "A Haptava WebDAV Server running on Heroku",
   "repository": "https://github.com/haptava/heroku-webdav",
   "logo": "https://dl.dropboxusercontent.com/u/481551/haptava/haptava_logo.svg",
   "keywords": [
