Turn off webdav timing

--- a/conf/webdav.properties
+++ b/conf/webdav.properties
@@ -3,7 +3,7 @@
 #
 
 haptava.webdav.format=json
-haptava.webdav.timing.enabled=true
+haptava.webdav.timing.enabled=false
 haptava.webdav.header.logging.enabled=false
 
 haptava.jvmmetrics.enabled=true
