--- a/pom.xml
+++ b/pom.xml
@@ -149,10 +149,15 @@
                   <id>webdav.sh</id>
                   <mainClass>io.haptava.launcher.cli.WebDavLauncher</mainClass>
                   <jvmSettings>
+                    <systemProperties>
+                      <systemProperty>
+                        haptava.adminservlets.unified.enabled=true
+                      </systemProperty>
+                      <systemProperty>
+                        log4j.configuration=file:"$BASEDIR"/log4j/webdav.log4j.properties
+                      </systemProperty>
+                    </systemProperties>
                     <extraArguments>
-                      <extraArgument>
-                        -Dlog4j.configuration=file:"$BASEDIR"/log4j/webdav.log4j.properties
-                      </extraArgument>
                       <extraArgument>-server</extraArgument>
                     </extraArguments>
                   </jvmSettings>
